deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  type: ClusterIP
  selector:
    app: rollouts-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
